add Angle and Blur Filter

--- a/facenet/src/config.ini
+++ b/facenet/src/config.ini
@@ -7,4 +7,9 @@ video = 0
 ;video = 1
 
 imagePath = face_img
-logFile = logFile.log
+;logFile = logFile.log
+
+yawFilter = 35.0
+pitchFilter = 20.0
+blurFilter = 5
+
