Made window adjustable with window size, made some minor tweak to the UI

--- a/facenet/src/logging.conf
+++ b/facenet/src/logging.conf
@@ -12,7 +12,7 @@ level=DEBUG
 handlers=consoleHandler,fileHandler
 
 [logger_tapway-face]
-level=ERROR
+level=DEBUG
 handlers=consoleHandler,fileHandler
 qualname=tapway-face
 propagate=0
