add new ip camera in config

--- a/facenet/src/config.ini
+++ b/facenet/src/config.ini
@@ -1,15 +1,16 @@
 [default]
 ; semi-colon use to comment line
 
-;video = rtsp://admin:admin@192.168.0.8/play1.sdp
-;video = rtsp://admin:admin@192.168.0.8/play2.sdp
-video = 0
+video = rtsp://admin:admin@192.168.0.12/play1.sdp
+;video = rtsp://admin:admin@192.168.0.12/play2.sdp
+;video = rtsp://admin:admin123@192.168.0.108/cam/realmonitor?channel=1&subtype=0
+;video = 0
 ;video = 1
 
 imagePath = face_img
 ;logFile = logFile.log
 
-yawFilter = 35.0
-pitchFilter = 20.0
-blurFilter = 5
+yawFilter = 45.0
+pitchFilter = 30.0
+blurFilter = 1
 
