Added gender and age range to tracking face rectangle

--- a/facenet/src/config.ini
+++ b/facenet/src/config.ini
@@ -1,10 +1,10 @@
 [default]
 ; semi-colon use to comment line
 
-video = rtsp://admin:admin@192.168.0.12/play1.sdp
+;video = rtsp://admin:admin@192.168.0.12/play1.sdp
 ;video = rtsp://admin:admin@192.168.0.12/play2.sdp
 ;video = rtsp://admin:admin123@192.168.0.108/cam/realmonitor?channel=1&subtype=0
-;video = 0
+video = 0
 ;video = 1
 
 imagePath = face_img
