Made frame interval configurable in config.ini

--- a/facenet/src/config.ini
+++ b/facenet/src/config.ini
@@ -10,6 +10,8 @@ video = 0
 imagePath = face_img
 ;logFile = logFile.log
 
+frameInterval = 10
+
 yawFilter = 45.0
 pitchFilter = 30.0
 blurFilter = 1
