--- a/facenet/requirements.txt
+++ b/facenet/requirements.txt
@@ -1,8 +1,14 @@
 tensorflow
 scipy
+PyWavelets
+pandas
 scikit-learn
 opencv-python
 h5py
+cmake
+dlib
+numpy
+boto3
 jsonpickle
 matplotlib
 Pillow
