added timestamps and blurriness to UI, added red border around baseline faces

--- a/facenet/src/logging.conf
+++ b/facenet/src/logging.conf
@@ -27,7 +27,7 @@ args=(sys.stdout,)
 class=FileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=(__import__("datetime").datetime.now().strftime('logs/tapway-face_%%H_%%M_%%d_%%m_%%Y.log'),'a')
+args=(__import__("datetime").datetime.now().strftime('logs/tapway-face_%%Y_%%m_%%d_%%H_%%M_%%S.log'),'a')
 
 [formatter_simpleFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s: %(message)s
