added upload image, changed blur detector

--- a/face-recognition/src/config.ini
+++ b/face-recognition/src/config.ini
@@ -14,7 +14,7 @@ frameInterval = 5
 
 yawFilter = 50.0
 pitchFilter = 8.0
-blurFilter = 1.5
+blurFilter = 65.0
 
-detectionThread = True
+detectionThread = False
 
