made filter for ID creation configurable in UI

--- a/face-recognition/src/config.ini
+++ b/face-recognition/src/config.ini
@@ -16,5 +16,9 @@ yawFilter = 60.0
 pitchFilter = 14.0
 blurFilter = 50.0
 
+yawFilterID = 30.0
+pitchFilterID = 8.0
+blurFilterID = 100.0
+
 detectionThread = False
 
