<multi-camera>Debug dict key error

--- a/multi-camera/config.ini
+++ b/multi-camera/config.ini
@@ -35,6 +35,7 @@ cropFactor = 0.20
 ;collection = test-collection
 
 [cam0]
+;video = 0
 video = rtsp://admin:tapway123@tapway1.dahuaddns.com/cam/realmonitor?channel=1&subtype=0
 roi = True
 roix1 = 0
