Add local IP for dahua site

--- a/multi-camera/config.ini
+++ b/multi-camera/config.ini
@@ -37,6 +37,7 @@ cropFactor = 0.20
 [cam0]
 ;video = 0
 video = rtsp://admin:tapway123@tapway1.dahuaddns.com/cam/realmonitor?channel=1&subtype=0
+;video = rtsp://admin:tapway123@192.168.0.199/cam/realmonitor?channel=1&subtype=0
 roi = True
 roix1 = 0
 roiy1 = 0
