update on vehicle recognition

--- a/face-recognition/src/config.ini
+++ b/face-recognition/src/config.ini
@@ -3,8 +3,9 @@
 
 ;video = rtsp://admin:admin@192.168.0.12/play1.sdp
 ;video = rtsp://admin:admin@192.168.0.12/play2.sdp
-;video = rtsp://admin:admin123@192.168.0.108/cam/realmonitor?channel=1&subtype=0
-video = 0
+video = rtsp://admin:admin123@192.168.0.108/cam/realmonitor?channel=1&subtype=0
+;video = rtsp://tapway:tapway123@tapway1.dahuaddns.com/cam/realmonitor?channel=1&subtype=0
+;video = 0
 ;video = 1
 
 imagePath = face_img
@@ -12,11 +13,11 @@ imagePath = face_img
 
 frameInterval = 5
 
-yawFilter = 60.0
-pitchFilter = 40.0
+yawFilter = 50.0
+pitchFilter = 60.0
 blurFilter = 50.0
 
-yawFilterID = 40.0
+yawFilterID = 35.0
 pitchFilterID = 25.0
 blurFilterID = 100.0
 
