--- a/multi-camera/config.ini
+++ b/multi-camera/config.ini
@@ -13,9 +13,12 @@ imagePath = face_img
 
 frameInterval = 5
 
-yawFilter = 60.0
-pitchFilter = 40.0
-blurFilter = 50.0
+;yawFilter = 60.0
+;pitchFilter = 40.0
+;blurFilter = 50.0
+yawFilter = 90.0
+pitchFilter = 90.0
+blurFilter = 0.0
 
 yawFilterID = 40.0
 pitchFilterID = 25.0
