Switch back database setting

--- a/multi-camera/config.ini
+++ b/multi-camera/config.ini
@@ -1,13 +1,10 @@
 [mysql]
 host=localhost
-user=root
-password=root
+user=test
+password=Test@123
 database=face
 
 [default]
-;video = rtsp://admin:admin@192.168.0.12/play1.sdp
-;video = rtsp://admin:admin@192.168.0.12/play2.sdp
-video = rtsp://admin:admin123@192.168.0.108/cam/realmonitor?channel=1&subtype=0
 imagePath = face_img
 logFile = logFile.log
 
@@ -39,8 +36,9 @@ cropFactor = 0.20
 
 [cam0]
 ;video = 0
-;video = rtsp://admin:tapway123@tapway1.dahuaddns.com/cam/realmonitor?channel=1&subtype=0
-video = rtsp://admin:admin123@192.168.0.108/cam/realmonitor?channel=1&subtype=0
+video = rtsp://admin:tapway123@tapway1.dahuaddns.com/cam/realmonitor?channel=1&subtype=0
+;video = rtsp://admin:tapway123@192.168.0.199/cam/realmonitor?channel=1&subtype=0
+;video = rtsp://admin:admin123@192.168.0.108/cam/realmonitor?channel=1&subtype=0
 roi = True
 roix1 = 0
 roiy1 = 0
