updated features emotion and face exit time

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [mysql]
 host=localhost
-user=test
-password=Test@123
+user=root
+password=tapway
 database=face
 
 [default]
@@ -35,8 +35,8 @@ cropFactor = 0.20
 ;collection = test-collection
 
 [cam0]
-;video = 0
-video = rtsp://admin:tapway123@tapway1.dahuaddns.com/cam/realmonitor?channel=1&subtype=0
+video = 0
+;video = rtsp://admin:tapway123@tapway1.dahuaddns.com/cam/realmonitor?channel=1&subtype=0
 ;video = rtsp://admin:tapway123@192.168.0.199/cam/realmonitor?channel=1&subtype=0
 ;video = rtsp://admin:admin123@192.168.0.108/cam/realmonitor?channel=1&subtype=0
 roi = True
